# uihash-hotnews

./: .gitignore  .gitmodules  AI_TAGGING_SYSTEM.md  DEPLOY_OAUTH_FIX.md  MODEL_POOL_MIGRATION.md  OAUTH_DEBUG_GUIDE.md  QUICKSTART_AI_CLASSIFICATION.md  README-EN.md  README.md  RSS_AI_OPTIMIZATION_SUMMARY.md  TAG_SYSTEM_GUIDE.md  TAG_SYSTEM_STATUS.md  check_ai_stats.py  check_ai_status.py  debug_fetch.py  debug_rss.py  debug_tnw.py  deploy-rebuild.sh  deploy_tar.sh  diagnose_oauth.sh  hotfix-viewer.sh  hover.html  index.html  metagpt-dev.sh  migrate_config_to_db.py  monitor_oauth.sh  package.json  playwright.config.ts  privacy.html  pyproject.toml  rebuild_only.sh  requirements.toml  requirements.txt  rss_feeds.csv  test_ai_classification.py  test_anthropic.py  test_cls.py  test_google_oauth.sh  test_oauth_login.html  test_tnw_regex.py  (+4 more)
.claude/: settings.local.json
config/: config.yaml  filter_blacklist.txt
docker/: .env.example  Dockerfile  Dockerfile.mcp  Dockerfile.viewer  docker-compose-build.yml  docker-compose.nginx.yml  docker-compose.yml  entrypoint.sh  local-refresh-viewer.sh  local-validate.sh  manage.py  requirements.viewer.txt
docs/: FIX_ENCODING_ISSUE.md  HOW_TO_CHECK_AI_STATUS.md  METAGPT_DEV_GUIDE.md  README.md  RSS_AI_CLASSIFICATION.md
hotnews/: __init__.py  __main__.py  context.py
mcp_server/: __init__.py  server.py
openspec/: AGENTS.md  project.md
scripts/: build_search_index.py  metagpt-dev.sh  migrate_add_use_scraperapi.py  migrate_custom_sources.sh  predeploy-cache-bust.py  rsync-sync.sh  setup-mac.sh  sina_tech_roll.py  start-http.sh  (+3 more)
(+277 files in other folders)
