[project]
name = "hotnews-mcp"
version = "1.1.0"
description = "Hotnews MCP Server - 新闻热点聚合工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "pytz>=2025.2,<2026.0",
    "PyYAML>=6.0.3,<7.0.0",
    "fastmcp>=2.12.0,<2.14.0",
    "websockets>=13.0,<14.0",
    "fastapi>=0.125.0",
    "uvicorn>=0.38.0",
    "pydantic-settings>=2.12.0",
    "jinja2>=3.1.0",
]

[project.scripts]
hotnews = "mcp_server.server:run_server"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]
